<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ProdukEntry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp">

        <EditText
            android:id="@+id/enttry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Judul Buku" />

        <EditText
            android:id="@+id/entryy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enttry"
            android:hint="Harga Buku" />

        <Button
            android:id="@+id/simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/entryy"
            android:onClick="Simpan"
            android:text="@string/smp" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/simpan"
            android:onClick="batal"
            android:text="@string/batal" />
        <Button
            android:id="@+id/tutup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cancel"
            android:onClick="tutup"
            android:text="@string/tutup" />
    </RelativeLayout>

</RelativeLayout>